[gd_scene load_steps=11 format=3 uid="uid://fabxjwy5b2i4"]

[ext_resource type="Script" path="res://Dialogs/skill_upgrade_dialog.gd" id="1_25irh"]
[ext_resource type="Script" path="res://Scenes/fadeable_container.gd" id="2_pre67"]
[ext_resource type="Texture2D" uid="uid://b14w8r43ut34" path="res://Textures/UI/shop_frame.png" id="3_l576p"]
[ext_resource type="Texture2D" uid="uid://ba44xgufi4hjl" path="res://Textures/UI/mini_icon_skill.png" id="4_voedw"]
[ext_resource type="Texture2D" uid="uid://bcjstfd38pb23" path="res://Textures/UI/mini_icon_coin.png" id="5_eh3s5"]
[ext_resource type="Texture2D" uid="uid://c8aebb8lh1op3" path="res://Textures/UI/MiniButtons/mini_button_buy_right.png" id="6_38ijk"]
[ext_resource type="Texture2D" uid="uid://c60q1np4mc5ui" path="res://Textures/UI/MiniButtons/mini_button_buy_right_off.png" id="7_p86lm"]
[ext_resource type="Texture2D" uid="uid://dbp2api70mifw" path="res://Textures/UI/MiniButtons/mini_button_recycle_wide.png" id="8_ypv7c"]
[ext_resource type="PackedScene" uid="uid://br2xttibjn8qo" path="res://Dialogs/SkillUpgradeElements/SkillUpgradeItem.tscn" id="9_jdgje"]
[ext_resource type="Texture2D" uid="uid://dcfd2873d6qbm" path="res://Textures/UI/MiniButtons/mini_button_cross.png" id="10_a3e2q"]

[node name="SkillUpgradeDialog" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_25irh")

[node name="FadeableCenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -512.0
offset_right = 512.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_pre67")

[node name="TextureRect" type="TextureRect" parent="FadeableCenterContainer"]
layout_mode = 2
texture = ExtResource("3_l576p")

[node name="MarginContainer" type="MarginContainer" parent="FadeableCenterContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 98
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 90
theme_override_constants/margin_bottom = 140

[node name="HBoxContainer" type="HBoxContainer" parent="FadeableCenterContainer/TextureRect/MarginContainer"]
layout_mode = 2

[node name="LeftVBoxContainer" type="VBoxContainer" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer"]
layout_mode = 2
theme_type_variation = &"SkillsHeaderLabel"
text = " Skills"

[node name="SkillPointsHBoxContainer" type="HBoxContainer" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="SkillPointLabel" type="Label" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer/SkillPointsHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"SkillsAmountLabel"
text = "9999"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SkillPointTextureRect" type="TextureRect" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer/SkillPointsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_voedw")

[node name="BuySkillPointsWithCoinsHBoxContainer" type="HBoxContainer" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer"]
layout_mode = 2

[node name="SkillPointCoinsCostLabel" type="Label" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer/BuySkillPointsWithCoinsHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"SkillsAmountLabel"
text = "2000
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CoinTextureRect" type="TextureRect" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer/BuySkillPointsWithCoinsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("5_eh3s5")

[node name="BuySkillPointsButton" type="TextureButton" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer/BuySkillPointsWithCoinsHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("6_38ijk")
texture_disabled = ExtResource("7_p86lm")

[node name="SkillPointsLabel" type="Label" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer/BuySkillPointsWithCoinsHBoxContainer"]
visible = false
layout_mode = 2
theme_type_variation = &"SkillsAmountLabel"
text = "1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillPointTextureRect" type="TextureRect" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer/BuySkillPointsWithCoinsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("4_voedw")

[node name="CoinsHBoxContainer" type="HBoxContainer" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="CoinsLabel" type="Label" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer/CoinsHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"SkillsAmountLabel"
text = "200
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CoinsTextureRect" type="TextureRect" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer/CoinsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_eh3s5")

[node name="ResetSkillPointsButton" type="TextureButton" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("8_ypv7c")

[node name="SkillResetLabel" type="Label" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer/ResetSkillPointsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -17.5
offset_right = 32.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"SkillsAmountLabel"
text = "Reset
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 764)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="SkillUpgradeItemContainer" type="VBoxContainer" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="MagnetRangeUpgradeItem" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/ScrollContainer/SkillUpgradeItemContainer" instance=ExtResource("9_jdgje")]
layout_mode = 2
title = "Magnet Range"
maximum = 5
skill_id = 1

[node name="MagnetRangeBoostUpgradeItem" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/ScrollContainer/SkillUpgradeItemContainer" instance=ExtResource("9_jdgje")]
layout_mode = 2
title = "Magnet Boost Range "
maximum = 5
skill_id = 2

[node name="MagnetDurationBoostUpgradeItem" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/ScrollContainer/SkillUpgradeItemContainer" instance=ExtResource("9_jdgje")]
layout_mode = 2
title = "Magnet Duration Boost"
maximum = 5

[node name="CoinExplosionUpgradeItem" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/ScrollContainer/SkillUpgradeItemContainer" instance=ExtResource("9_jdgje")]
layout_mode = 2
title = "Coin Explosion"
maximum = 5

[node name="CoinRainUpgradeItem" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/ScrollContainer/SkillUpgradeItemContainer" instance=ExtResource("9_jdgje")]
layout_mode = 2
title = "Coin Rain"
maximum = 5

[node name="DummyUpgradeItem1" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/ScrollContainer/SkillUpgradeItemContainer" instance=ExtResource("9_jdgje")]
layout_mode = 2
title = "Dummy 1"
maximum = 5

[node name="DummyUpgradeItem2" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/ScrollContainer/SkillUpgradeItemContainer" instance=ExtResource("9_jdgje")]
layout_mode = 2
title = "Dummy 2"
maximum = 5

[node name="DummyUpgradeItem3" parent="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/ScrollContainer/SkillUpgradeItemContainer" instance=ExtResource("9_jdgje")]
layout_mode = 2
title = "Dummy 3"
maximum = 5

[node name="MarginContainer3" type="MarginContainer" parent="FadeableCenterContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 98
theme_override_constants/margin_top = 47
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 140

[node name="CloseButton" type="TextureButton" parent="FadeableCenterContainer/TextureRect/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("10_a3e2q")

[connection signal="pressed" from="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer/BuySkillPointsWithCoinsHBoxContainer/BuySkillPointsButton" to="." method="_on_buy_skill_point_button_pressed"]
[connection signal="pressed" from="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftVBoxContainer/ResetSkillPointsButton" to="." method="_on_reset_skill_points_button_pressed"]
[connection signal="skill_buy_triggered" from="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/ScrollContainer/SkillUpgradeItemContainer/MagnetRangeUpgradeItem" to="." method="_on_skill_buy_triggered"]
[connection signal="skill_buy_triggered" from="FadeableCenterContainer/TextureRect/MarginContainer/HBoxContainer/ScrollContainer/SkillUpgradeItemContainer/MagnetRangeBoostUpgradeItem" to="." method="_on_skill_buy_triggered"]
[connection signal="pressed" from="FadeableCenterContainer/TextureRect/MarginContainer3/CloseButton" to="." method="_on_close_button_pressed"]
